# nl2sql

./: FRONTEND_RESTRUCTURE.md  README.md
nl2sql-interface/nl2sql-interface/: package-lock.json  (+1 more)
nl2sql-logic/: .env  .gitignore  ConversationNameModel.py  CredentialsModel.py  DATABASE_SETUP.md  DBURLInputModel.py  FeedbackModel.py  Modelfile  NLInputModel.py  QueryExtractor.py  QueryModel.py  README.md  SQLAlchemySession.py  UserIDModel.py  ValidationModule.py  auth_controller.py  conversation_controller.py  curate_examples.py  db_generator.py  description_heuristics.py  example.db  example_manager.py  feedback_storage.py  hash_password.py  init_db.sql  init_schema.sql  main.py  migrate_conversations.sql  postgres_connection.py  production_examples.json  prompt_examples.json  prompt_manager.py  pyproject.toml  result_storage.py  schema.json  schema_descriptions.json  schema_processor.py  session_manager.py  test_auth_controller.py  test_conversation_controller.py  (+4 more)
nl2sql-logic/test_pipeline/: README.md  REFERENCE.md  dataset_loader.py  example.py  executor.py  metrics.py  quickstart.py  runner.py
nl2sql-logic/test_pipeline/test_results/: results_20260430_195627.json  results_20260430_195753.json  results_20260430_200540.json  results_20260430_200612.json  results_20260430_201152.json  results_20260430_201801.json  results_20260430_201942.json  results_20260430_213216.json  results_20260430_215256.json  results_20260430_235410.json  results_20260501_000645.json  results_20260501_000713.json  results_20260501_022002.json  results_qwen2.5coder_7b_spider_1.json
(+17 files in other folders)
