[project]
name = "nl2sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "ollama>=0.6.1",
    "psycopg2-binary>=2.9.11",
    "sentence-transformers>=5.2.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
